--- a/style.css
+++ b/style.css
@@ -6,68 +6,83 @@ body
 #container
 {
 	width: 30%;
-	margin : 100px auto;
-	padding: 10px;
+	margin: 70px auto;
 }
 
 #menu
 {
-	width: 100%;
-
 	display: grid;
-
 	grid-template-columns: 80% 20%;
 	height: 60px;
-	margin-bottom: 10px;
 }
 
 input
 {
-	padding-left: 10px;
+	font-size: 1.6vw;
+	padding-left: 20px;
 	margin-right: 10px;
-	font-size: 2em;
 }
 
 button
 {
-	font-size: 1.3vw;
-	text-align: center;
-	font-weight: bold;
-	padding : 10px 15px;
-	background-color: #5574a9;
+	color: white;
+	background-color: #4287f5;
 	border: none;
 	box-shadow: 0px 0px 2px 1px black;
-	color: white;
+	font-size: 1.6vw;
 }
 
 #description
 {
-
+	min-width: 0px;
 	color: white;
-	background-color: rgba(0,0,0,0.7);
+	font-size: 2.5em;
+	background-color: rgba(0,0,0,0.6);
+	margin: 20px auto;
 	border-radius: 20px;
-	width: 50%;
-	margin: 0px auto;
 	padding: 10px 30px;
-	font-size: 1.4vw;
-	visibility: hidden;
+	display: hidden;
 }
 
 img
 {
-	float : right;
-	margin-top: -15px;
-	color : red;
-	font-family: "Verdana";
+	float: right;
+	margin-top: -14px;
+	width: 78px;
 }
 
-.degree
+@media only screen and (max-width: 1100px)
 {
-	font-size: 2em;
-	font-weight: bold;
+	#container
+	{
+		width: 70%;
+	}
+
+	input
+	{
+		font-size: 3vw;
+	}
+
+	button
+	{
+		font-size: 3vw;
+	}
 }
 
-.info
+@media only screen and (max-width: 600px)
 {
-	font-style: italic;
+	#container
+	{
+		width: 100%;
+	}
+
+	input
+	{
+		font-size: 5vw;
+	}
+
+	button
+	{
+		font-size: 5vw;
+	}
 }
