--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ input
 button
 {
 	color: white;
-	background-color: #4287f5;
+	background-color: #5574a9;
 	border: none;
 	box-shadow: 0px 0px 2px 1px black;
 	font-size: 1.6vw;
@@ -34,14 +34,13 @@ button
 
 #description
 {
-	min-width: 0px;
 	color: white;
 	font-size: 2.5em;
 	background-color: rgba(0,0,0,0.6);
 	margin: 20px auto;
 	border-radius: 20px;
 	padding: 10px 30px;
-	display: hidden;
+	visibility: hidden;
 }
 
 img
